--- a/src/components/FicheLogement/Slideshow.css
+++ b/src/components/FicheLogement/Slideshow.css
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1440px;
+    max-width: 1240px;
     border-radius: 25px;
     width: 100%;
     height: 415px;
