--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,7 +10,7 @@
     align-items: center;
     max-width: 1240px;
     margin: auto;
-    padding: 40px;
+    padding: 40px 0;
 }
 
 .logoKasa {
